--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
+body {
+  background-color: blanchedalmond;
+}
 .App {
   text-align: center;
+  margin-top: 50px;
+  
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.h1{ 
+  text-decoration-color: aquamarine;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.counter-container {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  padding: 10px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #3498db; 
+  color: white; 
+  border:#3498db black;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
 }
+
